# NE525_Plasma_Proj_roshan_bonick

./: .gitignore  README.md  README.txt  pyproject.toml
examples/: a_mode_demo.py  h_mode_demo.py  l_mode_demo.py
openmc_studies/: fixed_source_cylindrical_shell_test.py  fixed_source_shell_test.py  fixed_source_torus_shell_test.py  fixed_source_vacuum_test.py  openmc_fixed_source_minimal.py  openmc_fixed_source_vacuum_test.py  openmc_source_test.py
openmc_tests/: fixed_source_cylindrical_shell_test.py  fixed_source_shell_test.py  fixed_source_torus_shell_test.py  fixed_source_vacuum_test.py  vacuum_test.py
openmc_tokamak_mode_comparison/: compute_neutron_rate_each_mode.py  l_vs_a_same_center_profile.py  run_a_mode.py  run_h_mode.py  same_fusion_table.py  torus_build.py
source_shape_scan/: metrics.py  profiles.py  scan_fixed_power.py  scan_pedestal_radius.py
source_studies/: a_mode_paper_demo_case.py  compare_l_mode_vs_a_mode_paper.py  compare_l_mode_vs_pedestal.py  demo_case_util.py  l_mode_demo_case.py  mesh_convergence_l_mode.py  pedestal_mode_demo_case.py  plot_3D_source_density_examples.py  plot_3D_source_density_l_mode.py  plot_energy_spectrum_mg_l_mode.py
studies/: a_mode_demo_case.py  a_mode_paper_demo_case.py  compare_l_mode_vs_a_mode.py  compare_l_mode_vs_a_mode_paper.py  compare_l_mode_vs_pedestal.py  l_mode_demo_case.py  mesh_convergence_l_mode.py  openmc_fixed_source_minimal.py  openmc_source_test.py  pedestal_mode_demo_case.py
tests/: test_a_mode_paper_profile.py  test_api.py  test_case_builder.py  test_convergence_l_mode.py  test_geometry.py  (+9 more)
(+83 files in other folders)
