[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokamak-source-model"
version = "0.1.0"
description = "Tokamak DT neutron source model for the NE525 project"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["tokamak_source_model*"]